<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">天天爱掼蛋</string>
    <string name="tbl_app_name">istarSDK</string>
    <!-- tbl string satrt -->
    <string name="tbl_login">登录</string>
	<string name="tbl_login_account_hint">账号 或 手机号</string>
	<string name="tbl_login_pass_hint">密码</string>
	<string name="tbl_startgame">开 始 游 戏</string>
	<string name="tbl_edit_pass">修改密码</string>
	<string name="tbl_forget_pass">忘记密码</string>
	<string name="tbl_quick_login">一键登录</string>
	<string name="tbl_register">注册账号</string>
	<string name="tbl_register_mail">邮箱注册</string>
	<string name="tbl_register_phone">手机注册</string>
	<string name="tbl_old_pass">原密码</string>
	<string name="tbl_new_pass">新密码 (6&#8211;18位)</string>
	<string name="tbl_confrim_pass">确认密码</string>
	<string name="tbl_sure">确 认</string>
	<string name="tbl_find_pass">找回密码</string>
	<string name="tbl_phone_account">手机账号</string>
	<string name="tbl_mail_account">邮箱账号</string>
	<string name="tbl_find_pass_mail_title">找回邮箱账号密码</string>
	<string name="tbl_phone">手机号</string>
	<string name="tbl_vrification">验证码 &#160;</string>
	<string name="tbl_get_vrification">获取验证码</string>
	<string name="tbl_mail">邮箱</string>
	<string name="tbl_find_account">找回手机账号密码</string>
	<string name="tbl_clear">X</string>
	<string name="tbl_switch_account">换号</string>
	<string name="tbl_pay_ali">快捷支付</string>
	<string name="tbl_pay_bank">银行卡</string>
	<string name="tbl_sdk_sys_notice">系统消息</string>
	<string name="tbl_close">关 闭</string>
	<!-- tbl string end -->
	<!-- 下拉刷新 -->
    <string name="xlistview_header_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_ready">释放加载更多&#8230;</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次加载时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">释放加载更多&#8230;</string>
</resources>
