<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tbl_main_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/tbl_50px"
            android:layout_marginTop="@dimen/tbl_medium"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tbl_register_phone_back"
                style="@style/tblBackArrowStyle" />

            <TextView
                android:id="@+id/tbl_register_phone_title"
                style="@style/tblAccountTitleStyle"
                android:layout_centerHorizontal="true"
                android:text="@string/tbl_register_phone" />

            <TextView
                android:id="@+id/tbl_register_phone_email"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbl_register_mail"
                android:textColor="@color/tbl_white"
                android:textSize="@dimen/tbl_text_small" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tbl_register_wrong_tips"
            style="@style/tblWrongTipsStyle"
             />

        <EditText
            android:id="@+id/tbl_register_phone_account"
            style="@style/tblEditStyle"
            android:hint="@string/tbl_phone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tbl_large"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/tbl_register_phone_verification"
                style="@style/tblEditStyle"
                android:layout_width="wrap_content"
                android:maxLength="15"
                android:hint="@string/tbl_vrification" />

            <TextView
                android:id="@+id/tbl_register_phone_verification_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/tbl_small"
                android:background="@drawable/tbl_vcode_btn_bg"
                android:gravity="center"
                android:padding="@dimen/tbl_small"
                android:text="@string/tbl_get_vrification"
                android:textSize="@dimen/tbl_text_small"
                android:textColor="@color/tbl_main" />
        </LinearLayout>

        <EditText
            android:id="@+id/tbl_register_phone_new_pass"
            style="@style/tblEditStyle"
            android:layout_marginTop="@dimen/tbl_large"
            android:hint="@string/tbl_new_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/tbl_register_phone_confirm_pass"
            style="@style/tblEditStyle"
            android:layout_marginTop="@dimen/tbl_large"
            android:hint="@string/tbl_confrim_pass"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tbl_register_phone_next"
            style="@style/tblBottomBtnStyle"
            android:layout_marginTop="@dimen/tbl_large"
            android:text="@string/tbl_sure" />
    </LinearLayout>

</ScrollView>