<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/tbl_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tbl_main_bg"
        android:orientation="vertical" >

        <View
            android:id="@+id/tbl_top_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/tbl_llarge"
            android:text="@string/tbl_login"
            android:textColor="@color/tbl_white"
            android:textSize="@dimen/tbl_text_large" />

        <TextView
            android:id="@+id/tbl_login_wrong_tips"
            style="@style/tblWrongTipsStyle" />

        <LinearLayout
            android:id="@+id/tbl_login_account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tbl_50px"
            android:layout_marginRight="@dimen/tbl_50px"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/tbl_user_icon" />

            <EditText
                android:id="@+id/tbl_login_account"
                style="@style/tblEditStyleBase"
                android:layout_weight="1"
                android:hint="@string/tbl_login_account_hint" />

            <TextView
                android:id="@+id/tbl_login_clear_account"
                style="@style/tblEditStyleBase"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/tbl_single_pixel"
                android:text="@string/tbl_clear"
                android:textColor="@color/tbl_main"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tbl_login_switch_account"
                style="@style/tblEditStyleBase"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/tbl_single_pixel"
                android:text="@string/tbl_switch_account"
                android:textColor="@color/tbl_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tbl_50px"
            android:layout_marginRight="@dimen/tbl_50px"
            android:layout_marginTop="@dimen/tbl_large"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/tbl_pass_icon" />

            <EditText
                android:id="@+id/tbl_login_pass"
                style="@style/tblEditStyleBase"
                android:hint="@string/tbl_login_pass_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbl_login_vcode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tbl_large"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/tbl_login_vrification"
                style="@style/tblEditStyle"
                android:layout_width="wrap_content"
                android:maxLength="6"
                android:hint="@string/tbl_vrification" />

            <ImageView
                android:id="@+id/tbl_login_vrification_img"
                android:layout_width="@dimen/tbl_140px"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/tbl_user_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/tbl_login_login"
            style="@style/tblBtnStyle"
            android:text="@string/tbl_startgame" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tbl_96px"
            android:layout_marginRight="@dimen/tbl_96px"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tbl_login_edit_pass"
                style="@style/tblLoginPassBtnStyle"
                android:layout_weight="1"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tbl_login_forget_pass"
                style="@style/tblLoginPassBtnStyle"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/tbl_forget_pass" 
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tbl_login_quick_login"
                style="@style/tblBottomBtnStyle"
                android:layout_weight="1"
                android:background="@drawable/tbl_left_btn_bg"
                android:text="@string/tbl_quick_login"
                android:textColor="@drawable/tbl_text_white_orange_bg" />

            <TextView
                android:id="@+id/tbl_login_regist"
                style="@style/tblBottomBtnStyle"
                android:layout_weight="1"
                android:background="@drawable/tbl_right_btn_bg"
                android:text="@string/tbl_register"
                android:textColor="@drawable/tbl_text_white_green_bg" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>