<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tbl_main_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tbl_llarge" >

            <TextView
                android:id="@+id/tbl_find_pass_back"
                style="@style/tblBackArrowStyle" />

            <TextView
                style="@style/tblAccountTitleStyle"
                android:layout_centerHorizontal="true"
                android:text="@string/tbl_find_pass" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tbl_find_pass_phone"
                style="@style/tblAccountTitleStyle"
                android:layout_weight="1"
                android:drawableTop="@drawable/tbl_phone_icon"
                android:text="@string/tbl_phone_account" />

            <TextView
                android:id="@+id/tbl_find_pass_mail"
                style="@style/tblAccountTitleStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/tbl_mail_icon"
                android:gravity="bottom|center_horizontal"
                android:paddingTop="@dimen/tbl_llarge"
                android:text="@string/tbl_mail_account" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>